<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="{{ cookiecutter.package_name }}.ui.main.MainActivityViewModel" />
        <variable
            name="character"
            type="{{ cookiecutter.package_name }}.data.local.entities.Character" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/detail_character_margin_horizontal"
        tools:context=".ui.characterdetail.CharacterDetailFragment">

        <ProgressBar
            android:id="@id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"
            tools:visibility="gone" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@id/cl_character"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@id/tv_image"
                android:layout_width="@dimen/detail_character_image_view_size"
                android:layout_height="@dimen/detail_character_image_view_size"
                android:layout_marginTop="@dimen/detail_character_margin_top"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:imageUrl="@{character.image}"
                />

            <TextView
                android:id="@id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/detail_character_margin_top"
                tools:text="TextView"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_image"
                android:text="@{character.name}"/>

            <TextView
                android:id="@id/tv_species_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/detail_character_species_text_margin_top"
                android:text="@string/detail_character_species_w_colon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_name" />

            <TextView
                android:id="@id/tv_species"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="TextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_species_text"
                android:text="@{character.species}"/>

            <TextView
                android:id="@id/tv_status_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/detail_character_margin_top"
                android:text="@string/detail_character_status_w_colon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_species_text"/>

            <TextView
                android:id="@id/tv_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/detail_character_margin_top"
                tools:text="TextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_species"
                android:text="@{character.status}"/>

            <TextView
                android:id="@id/tv_gender_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/detail_character_margin_top"
                android:text="@string/detail_character_gender_w_colon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_status_text" />

            <TextView
                android:id="@id/tv_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/detail_character_margin_top"
                tools:text="TextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_status"
                android:text="@{character.gender}"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>