<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="{{ cookiecutter.package_name }}.ui.login.LoginViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:isScrollContainer="true"
        android:background="@drawable/custom_background"
        tools:context=".ui.login.LoginActivity"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/login_layout_margin_horizontal">

            <com.google.android.material.card.MaterialCardView
                android:id="@id/mcv_login_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/login_mcv_card_corner_radius"
                app:cardElevation="@dimen/login_mcv_card_elevation"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="@dimen/login_card_layout_margin_horizontal"
                    android:layout_marginTop="@dimen/login_card_layout_margin_top"
                    android:layout_marginBottom="@dimen/login_card_layout_margin_bottom"
                    android:background="@android:color/white"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/username"
                        android:textColorHint="@color/dark_grey"
                        app:hintTextColor="@color/biru"
                        app:startIconDrawable="@drawable/ic_profil">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_username"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/white"
                            style="@style/Text.Reguler.16sp.DarkGrey"
                            android:importantForAutofill="no"
                            android:inputType="text"
                            android:text=""
                            tools:ignore="TextContrastCheck" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/login_et_password_margin_top"
                        android:hint="@string/password"
                        android:textColorHint="@color/dark_grey"
                        app:hintTextColor="@color/biru"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="@color/dark_grey"
                        app:startIconDrawable="@drawable/ic_password">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_password"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/white"
                            style="@style/Text.Reguler.16sp.DarkGrey"
                            android:importantForAutofill="no"
                            android:inputType="textPassword"
                            android:text=""
                            app:hintTextColor="@color/dark_grey"
                            tools:ignore="TextContrastCheck" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@id/button_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/login_button_margin_top"
                        android:foreground="?attr/selectableItemBackground"
                        android:onClick="@{() -> viewModel.doLogin(etUsername.getText().toString(),etPassword.getText().toString())}"
                        app:cardBackgroundColor="@color/birugelap"
                        app:cardCornerRadius="@dimen/login_button_card_corner_radius"
                        app:cardElevation="@dimen/login_button_card_elevation">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            style="@style/Text.Medium.14sp.White.AllCaps"
                            android:gravity="center"
                            android:padding="@dimen/login_button_text_padding"
                            android:text="@string/login" />

                    </com.google.android.material.card.MaterialCardView>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <ImageView
                android:id="@+id/img_logo_bank_indonesia"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_image_height"
                android:layout_marginBottom="@dimen/login_img_logo_margin_bottom"
                app:layout_constraintBottom_toTopOf="@id/mcv_login_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/img_logo_bank_indonesia_white" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@id/tv_copyright"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/login_tv_copyright_margin_bottom"
                android:fontFamily="@font/roboto_regular"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>